feat: @Text format — fixed-width padding + date format codes (D0-D3, T0-T1, S0-S3)